grammar.js
    source_file: ($) => 
      optional(
        seq(
          optional($._nl), 
          repeat(seq($._element, $._nl)), 
          optional(choice($._element, $._nl, $._ws))
        )
      ),

    _element: ($) =>
      choice(
        $._statement,
        $.control,
        $._standalone_label,
        $._standalone_comment,
      ),

    _start_line: ($) => choice($._label, $._ws),

    //----------------------------------------------------------------------
    // Labels:
    //----------------------------------------------------------------------

    comment: () => /;[^\n\r]*/,

    _end_line: () => /[ \t]*;[^\n\r]*/,

    //----------------------------------------------------------------------
    // Instructions
    //----------------------------------------------------------------------

    instruction: ($) =>
      seq(
        field("mnemonic", $._instruction_mnemonic),
        optional(field("operands", $.operand_list))
      ),

    _instruction_mnemonic: ($) => 
      alias(mnemonicChoice(instructions), $.instruction_mnemonic),

    operand_list: ($) => seq($._ws, commaSep($._operand, $._sep)),

    _operand: ($) => 
      choice($._address, $._register, seq(optional("#"), $._expression)),

    //----------------------------------------------------------------------
    // Directives:
    //----------------------------------------------------------------------

    directive_comment: ($) => 
      seq(
        field("mnemonic", alias(mnemonicChoice([".comment"]), $.directive_mnemonic)),
        $._ws,
        field("operands", $.string_literal)
      ),

    directive_end: ($) =>
      field("mnemonic", alias(mnemonicChoice([".end"]), $.directive_mnemonic)),

    directive_include: ($) => 
      seq(
        field("mnemonic", alias(mnemonicChoice([".include"]), $.directive_mnemonic)),
        $._ws,
        field("operands", choice($.string_literal, alias(/<[^"'\s,<>]+>/, $.filename)))
      ),

    directive_message: ($) => 
      seq(
        field("mnemonic", alias(mnemonicChoice([".fail", ".message", ".warning"]), $.directive_mnemonic)),
        $._ws,
        field("operands", commaSep($._expression, $._sep))
      ),

    directive_alias: ($) =>
      seq(
        field("left", $._identifier),
        $._ws,
        field("mnemonic", alias(mnemonicChoice([".alias"]), $.directive_mnemonic)),
        $._ws,
        field("right", $._identifier)
      ),

    directive_equ: ($) =>
      seq(
        field("left", $._identifier),
        $._ws,
        field("mnemonic", alias(mnemonicChoice([".equ"]), $.directive_mnemonic)),
        $._ws,
        field("right", $._expression)
      ),

    directive_declare_symbol: ($) => 
      seq(
        field("mnemonic", alias(mnemonicChoice([".global", ".local"]), $.directive_mnemonic)),
        $._ws,
        field("operands", commaSep($._identifier, $._sep))
      ),

    directive_import_symbol: ($) =>
      seq(
        field("mnemonic", alias(mnemonicChoice([".extern", ".weak"]), $.directive_mnemonic)),
        $._ws,
        field("operands", commaSep($._identifier, $._sep))
      ),

    directive_org: ($) => 
      seq(
        field("mnemonic", alias(mnemonicChoice([".org"]), $.directive_mnemonic)),
        optional($._ws),
        field(
          "operands", 
          commaSep(
            optional(
              choice(
                $._expression,
                seq(/(cluster|group)\(/, alias($.string_literal, $.cluster), /\)/)
              )
            ), 
            $._sep
          )
        )
      ),

    directive_sdecl: ($) => 
      seq(
        field("mnemonic", alias(mnemonicChoice([".sdecl"]), $.directive_mnemonic)),
        $._ws,
        field("operands", commaSep(
          choice(
            $._expression,
            seq(/cluster\(/, alias($.string_literal, $.cluster), /\)/)
          ),
          $._sep
        )),
        optional(field("operands", seq(/ at /, $._expression)))
      ),

    directive_sect: ($) => 
      seq(
        field("mnemonic", alias(mnemonicChoice([".sect"]), $.directive_mnemonic)),
        $._ws,
        field("operands", commaSep($._expression, $._sep))
      ),
    
    directive_set: ($) =>
      choice(
        seq(
          field("left", $._identifier),
          $._ws,
          field("mnemonic", alias(mnemonicChoice([".set"]), $.directive_mnemonic)),
          $._ws,
          field("right", $._expression)
        ),
        seq(
          field("mnemonic", alias(mnemonicChoice([".set"]), $.directive_mnemonic)),
          $._ws,
          field("left", $._identifier),
          $._ws,
          field("right", $._expression)
        ),
      ),

    directive_size: ($) => 
      seq(
        field("mnemonic", alias(mnemonicChoice([".size"]), $.directive_mnemonic)),
        $._ws,
        field("operands", seq($._identifier, $._sep, $._expression))
      ),

    directive_type: ($) => 
      seq(
        field("mnemonic", alias(mnemonicChoice([".type"]), $.directive_mnemonic)),
        $._ws,
        field("type", alias(mnemonicChoice(["func", "object", "file"]), $.label_type))
      ),

    directive_data_definition: ($) =>
      seq(
        field(
          "mnemonic", 
          alias(
            mnemonicChoice(
              [".accum", ".align", ".ascii", ".asciiz", ".byte", ".double", ".float", ".fract", ".half", ".sfract", ".space", ".word"]
            ), 
            $.directive_mnemonic)
          ),
        $._ws,
        field("operands", commaSep(optional($._expression), $._sep))
      ),

    directive_define: ($) =>
      seq(
        field("mnemonic", alias(mnemonicChoice([".define"]), $.directive_mnemonic)),
        $._ws,
        field("left", $._identifier),
        $._ws,
        field("right", $.string_literal)
      ),

    directive_dup: ($) => 
      seq(
        field("mnemonic", alias(mnemonicChoice([".dup"]), $.directive_mnemonic)),
        $._ws,
        field("count", $._expression),
        optional($._end_line),
        $._nl,
        field("body", alias(repeat(seq($._element, $._nl)), $.element_list)),
        $._start_line,
        field("mnemonic", alias(mnemonicChoice([".endm"]), $.directive_mnemonic)),
      ),

    directive_dupa: ($) => 
      seq(
        field("mnemonic", alias(mnemonicChoice([".dupa"]), $.directive_mnemonic)),
        $._ws,
        field("formal_arg", $._identifier),
        $._sep,
        field("argument", commaSep(optional($._expression), $._sep)),
        optional($._end_line),
        $._nl,
        field("body", alias(repeat(seq($._element, $._nl)), $.element_list)),
        $._start_line,
        field("mnemonic", alias(mnemonicChoice([".endm"]), $.directive_mnemonic)),
      ),

    directive_dupc: ($) => 
      seq(
        field("mnemonic", alias(mnemonicChoice([".dupc"]), $.directive_mnemonic)),
        $._ws,
        field("formal_arg", $._identifier),
        $._sep,
        field("argument", $.string_literal),
        optional($._end_line),
        $._nl,
        field("body", alias(repeat(seq($._element, $._nl)), $.element_list)),
        $._start_line,
        field("mnemonic", alias(mnemonicChoice([".endm"]), $.directive_mnemonic)),
      ),

    directive_dupf: ($) => 
      seq(
        field("mnemonic", alias(mnemonicChoice([".dupf"]), $.directive_mnemonic)),
        $._ws,
        field("formal_arg", $._identifier),
        $._sep,
        field("argument", commaSep($._expression, $._sep)),
        optional($._end_line),
        $._nl,
        field("body", alias(repeat(seq($._element, $._nl)), $.element_list)),
        $._start_line,
        field("mnemonic", alias(mnemonicChoice([".endm"]), $.directive_mnemonic)),
      ),

    directive_conditional: ($) => 
      seq(
        field("mnemonic", alias(mnemonicChoice([".if"]), $.directive_mnemonic)),
        $._ws,
        field("test", $._expression),
        optional($._end_line),
        $._nl,
        field("body", alias(repeat(seq($._element, $._nl)), $.element_list)),
        repeat(
          prec.left(
            seq(
              $._start_line,
              field("mnemonic", alias(mnemonicChoice([".elif"]), $.directive_mnemonic)),
              $._ws,
              field("test", $._expression),
              optional($._end_line),
              $._nl,
              field("body", alias(repeat1(seq($._element, $._nl)), $.element_list)),
            )
          )
        ),
        optional(
          seq(
            $._start_line,
            field("mnemonic", alias(mnemonicChoice([".else"]), $.directive_mnemonic)),
            optional($._end_line),
            $._nl,
            field("body", alias(repeat(seq($._element, $._nl)), $.element_list)),
          )
        ),
        $._start_line,
        field("mnemonic", alias(mnemonicChoice([".endif"]), $.directive_mnemonic)),
      ),

    directive_exitm: ($) => 
      field("mnemonic", alias(mnemonicChoice([".exitm"]), $.directive_mnemonic)),

    directive_macro: ($) => 
      seq(
        field("left", $._identifier),
        $._ws,
        field("mnemonic", alias(mnemonicChoice([".macro"]), $.directive_mnemonic)),
        $._ws,
        field("right", commaSep($._identifier, $._sep)),
        optional($._end_line),
        $._nl,
        field("body", alias(repeat(seq($._element, $._nl)), $.element_list)),
        $._start_line,
        field("mnemonic", alias(mnemonicChoice([".endm"]), $.directive_mnemonic)),
      ),

    directive_pmacro: ($) => 
      seq(
        field("mnemonic", alias(mnemonicChoice([".pmacro"]), $.directive_mnemonic)),
        $._ws,
        field("operands", commaSep($._identifier, $._sep))
      ),
    
    directive_undef: ($) => 
      seq(
        field("mnemonic", alias(mnemonicChoice([".undef"]), $.directive_mnemonic)),
        $._ws,
        field("operands", $._identifier)
      ),

    directive_calls: ($) => 
      seq(
        field("mnemonic", alias(mnemonicChoice([".calls"]), $.directive_mnemonic)),
        $._ws,
        field("operands", commaSep(optional($._expression), $._sep))
      ),

    directive_hll: ($) =>
      seq(
        field(
          "mnemonic", 
          alias(
            mnemonicChoice(
              [".compiler_invocation", ".compiler_name", ".compiler_version", ".misrac"]
            ), 
            $.directive_mnemonic
          )
        ),
        $._ws,
        $.string_literal
      ),
    
    control: ($) => 
      seq(
        optional($._ws),
        choice(
          seq(
            mnemonicChoice(
              [
                "$list", "$page", "$prctl", "$stitle", "$title", "$case", "$debug", "$hw_only", "$ident", 
                "$mmu", "$no_fpu", "$object", "$tc131", "$tc16", "$tc16x", "$tc162", "$tc18"
              ]
            ),
            optional($._ws),
            optional(commaSep($._expression, $._sep)),
          ),
          seq(mnemonicChoice(["$warning"]), $._ws, mnemonicChoice(["off"]), $._ws, $.decimal_integer),
          seq(/\$[cC][pP][uU]_[tT][cC]\d+/, $._ws, mnemonicChoice(["off", "on"]))
        ),
        optional($._end_line)
      ),


    //----------------------------------------------------------------------
    // Macro calls:
    //----------------------------------------------------------------------

    macro_call: ($) => 
      prec.right(
        seq(
          field("macro", $._identifier),
          optional(field("operands", $.operand_list))
        )
      ),

    // Address:

    base_offset: ($) => 
      seq(
        /\[[ \t]*/,
        choice(
          $.address_register, 
          alias($.interpolated, $.register_macro_argument)
        ),
        /[ \t]*\][ \t]*/, 
        optional(field("offset", $._expression))
      ),

    data_register: () => 
      /[dD](?:[0-9]|1[0-5])([lLuU]{1,2})?/,
    data_register_bit: ($) =>
      seq(
        $.data_register,
        optional($._ws),
        ":",
        optional($._ws),
        alias(/\d+/, $.bit_position)
      ),
    extended_data_register: () => /[eE](?:[02468]|1[024])|[dD](?:[02468]|1[024])\s*\/\s*[dD](?:[13579]|1[135])/,
    _expression: ($) => 
      choice(
        $._numeric_literal,
        $._string,
        $.unary_expression,
        $.binary_expression,
        $.parenthesized_expression,
        $._identifier,
        $.function_call,
        alias($._local_label_ref, $.symbol)
      ),
    
    hexadecimal: () => /0[xX][0-9a-fA-F]+/,
    decimal_integer: () => /\d+/,
    decimal_float: () => token(/\d+((\.\d+([eE][+-]?\d+)?)|[eE][+-]?\d+)|\.\d+/),

    string_literal: ($) =>
      choice(
        // Single quoted
        seq(
          "'",
          repeat(
            choice(
              prec(1, /[^'\n\\]+/), // Normal chars
              "''", // Repeat quote escape
              $._string_escape_codes
            )
          ),
          "'"
        ),
        // Double quoted
        seq(
          '"',
          repeat(choice(prec(1, /[^"\n\\]+/), '""', $._string_escape_codes)),
          '"'
        ),
        $.string_concate,
        $.substring
      ),

    _string_escape_codes: ($) =>
      choice(
        /\\[\\bfnrt"'e]/, // Single char escape codes
        /\\[0-7]+/, // Octal character code
        /\\[xX][0-9a-f]+/, // Hex charcter code
      ),

    unary_expression: ($) => 
    prec(
      PREC.unary,
      seq(
        field("operator", alias(choice("+", "-", "!", "~"), $.operator)),
        field("operand", $._expression)
      )
    ),

    binary_expression: ($) =>
      choice(
        ...binaryOperators.map((operator, i) => 
          prec.left(
            i,
            seq(
              field("left", $._expression),
              field("operator", seq(optional($._ws), alias(operator, $.operator), optional($._ws))),
              field("right", $._expression)
            )
          ))
      ),

    _identifier: ($) =>
      choice($.symbol, $.interpolated),

    // symbol: () => {
    //   const symbolChars = /[a-zA-Z0-9._]/;
    //   const symbolStartChars = /[a-zA-Z._]/;
    //   return token(prec.right(seq(symbolStartChars, repeat(symbolChars))));
    // },

    symbol: ($) => 
      prec.right(
        $._symbol_chars
      ),

    _symbol_chars: () => /[a-zA-Z0-9._]+/,

    macro_arg: () => 
      token(
        choice(
          /[\\?%^][a-zA-Z._][a-zA-Z0-9._]*/,
          /\\[?%^][a-zA-Z._][a-zA-Z0-9._]*/,
        )
      ),

    interpolated: ($) => 
      prec.right(
        1,
        seq(
          choice(
            seq($.macro_arg, $._symbol_chars),
            seq($._symbol_chars, $.macro_arg),
            $.macro_arg
          ),
          repeat(choice($.macro_arg, $._symbol_chars)),
        ),
      ),

    function_call: ($) => 
      seq(
        "@",
        alias(mnemonicChoice(builtIn_functions), $.builtIn_function),
        /\([ \t]*/,
        optional($.expression_list),
        /[ \t]*\)/
      ),

    expression_list: ($) => commaSep($._expression, $._sep),

    //----------------------------------------------------------------------
    // Misc:
    //----------------------------------------------------------------------

    _sep: () => /[ \t]*,[ \t]*/,
    _ws: () => /[ \t]+/,
    _nl: () => /([ \t]*(\r\n|\n|\r))+/,
  }
});

function commaSep(rule, sep) {
  return seq(rule, repeat(seq(sep, rule)));
}

function toCaseInsensitive(a) {
  let ca = a.charCodeAt(0);
  if (ca >= 97 && ca <= 122) return `[${a}${a.toUpperCase()}]`;
  if (ca >= 65 && ca <= 90) return `[${a.toLowerCase()}${a}]`;
  return `[${a}]`;
}

function caseInsensitive(keyword) {
  return new RegExp(keyword.split("").map(toCaseInsensitive).join(""));
}

function mnemonicChoice(options) {
  return choice(...options.map(caseInsensitive));
}
